# power-outage-status

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_battery_status.sh  pyproject.toml  requirements.in  requirements.txt
src/config/: settings.py  urls.py
src/notifications/: __init__.py  admin.py  models.py  services.py
src/notifications/management/: __init__.py
src/notifications/management/commands/: __init__.py  setup_telegram_bot.py
src/notifications/migrations/: 0001_initial.py  0002_telegramsubscriber_delete_subscriber.py  0003_remove_telegramsubscriber_first_name_and_more.py
src/power/: admin.py  apps.py  models.py  views.py
src/power/management/: __init__.py
src/power/management/commands/: __init__.py  update_power_status.py
src/power/migrations/: 0001_initial.py
src/power/templates/power/: home.html
